--- a/Food/Info.plist
+++ b/Food/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>사용자의 현재 위치 기반으로 주변의 음식점을 보여주기 위해 사용자의 위치에 대한 권한이 필요합니다.</string>
 	<key>UIApplicationSceneManifest</key>
