--- a/Food/Info.plist
+++ b/Food/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>카메라를 사용하기 위해 접근을 허용해주세요</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>갤러리를 사용하기 위해 접근을 허용해주세요</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
